--- a/knockout-basketball-playbook/views/index.html
+++ b/knockout-basketball-playbook/views/index.html
@@ -11,6 +11,7 @@
         <div class="box-head">
             <h2 class="left">Tags</h2>
         </div>
+
         <div class="box-content">
             <input type="text" placeholder="Add New Tag" data-bind="value: tagToAdd, valueUpdate: 'afterkeydown'" />
             <button data-bind="click: addTag">Add</button>
@@ -18,13 +19,14 @@
                 <li class="tagItem">
                     <span data-bind="text: Name"></span>
                     <div>
-                        <a href="#" class="tag-edit" data-bind="editTag">Edit</a>
-                        <a href="#" class="tag-delete" data-bind="deleteTag">Delete</a>
+                        <a href="#" class="tag-edit" data-bind="click: $parent.editTag">Edit</a>
+                        <a href="#" class="tag-delete" data-bind="click: $parent.deleteTag">Delete</a>
                     </div>
                 </li>
             </ul>
         </div>
     </div>
+
     <script src="../scripts/knockout-3.4.0.debug.js" type="text/javascript"></script>
     <script src="../scripts/app/bp-index.js" type="text/javascript"></script>
 </body>
